--- a/public/search/index.html
+++ b/public/search/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en-us" dir="ltr">
-<head>
+<head><script src="/soma-blog-hugo/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=soma-blog-hugo/livereload" data-no-instant defer></script>
   <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <title>Search | Eeshan S.</title>
-<link rel="icon" href="/favicon.svg" sizes="any" type="image/svg+xml" /><meta property="og:url" content="https://eeshansrivastava89.github.io/soma-blog-hugo/search/">
+<link rel="icon" href="/favicon.svg" sizes="any" type="image/svg+xml" /><meta property="og:url" content="http://localhost:1313/soma-blog-hugo/search/">
   <meta property="og:site_name" content="Eeshan S.">
   <meta property="og:title" content="Search">
   <meta property="og:description" content="Search Search through posts, topics, and content on Science of Marketing Analytics.
 It&#39;s necessary to enable Javascript
-Loading...">
+Loading...
+Search">
   <meta property="og:locale" content="en_us">
   <meta property="og:type" content="article">
 
@@ -18,13 +19,14 @@ Loading...">
   <meta name="twitter:title" content="Search">
   <meta name="twitter:description" content="Search Search through posts, topics, and content on Science of Marketing Analytics.
 It&#39;s necessary to enable Javascript
-Loading...">
+Loading...
+Search">
 
-      <link rel="stylesheet" href="/soma-blog-hugo/css/custom.min.107b8e59c6c15485c4ec2a6513634c1e416e18bdc0d6004a1911b62b55cd14e2.css" integrity="sha256-EHuOWcbBVIXE7CplE2NMHkFuGL3A1gBKGRG2K1XNFOI=" crossorigin="anonymous">
-      <link rel="stylesheet" href="/soma-blog-hugo/css/root.min.0e732b812b9751962e01a7c4798a1211cd5f8ac8abec7f99793fe306989e459f.css" integrity="sha256-DnMrgSuXUZYuAafEeYoSEc1fisir7H&#43;ZeT/jBpieRZ8=" crossorigin="anonymous">
-      <link rel="stylesheet" href="/soma-blog-hugo/css/bundle.min.d95a325399a05b50fe47dcf35b8229b8a2a014fcee5435cfb28204c6ac335fc5.css" integrity="sha256-2VoyU5mgW1D&#43;R9zzW4IpuKKgFPzuVDXPsoIExqwzX8U=" crossorigin="anonymous">
+    <link rel="stylesheet" href="/soma-blog-hugo/css/custom.css">
+    <link rel="stylesheet" href="/soma-blog-hugo/css/root.css">
+    <link rel="stylesheet" href="/soma-blog-hugo/css/bundle.css">
 
-      <script src="/soma-blog-hugo/js/bundle.cc8ae9952dbfb731affafabdf26e5c60a6910047ff59ccdeaf1daebaa26c8830.js" integrity="sha256-zIrplS2/tzGv&#43;vq98m5cYKaRAEf/Wczerx2uuqJsiDA=" crossorigin="anonymous"></script><script defer src="/soma-blog-hugo/js/search/flexsearch.compact.64594b125f7b78bdf4fa8316955922bbebb1cd6baef3f16654bfca20309f18f8.js" integrity="sha256-ZFlLEl97eL30&#43;oMWlVkiu&#43;uxzWuu8/FmVL/KIDCfGPg="></script>
+      <script src="/soma-blog-hugo/js/bundle.js"></script><script defer src="/soma-blog-hugo/js/search/flexsearch.compact.64594b125f7b78bdf4fa8316955922bbebb1cd6baef3f16654bfca20309f18f8.js" integrity="sha256-ZFlLEl97eL30&#43;oMWlVkiu&#43;uxzWuu8/FmVL/KIDCfGPg="></script>
 <script defer src="/soma-blog-hugo/js/search/search.790c7dbb017eec9eace3c62d34665bc74799ffc15690b84e63b41018d5929a99.js" integrity="sha256-eQx9uwF&#43;7J6s48YtNGZbx0eZ/8FWkLhOY7QQGNWSmpk="></script>
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -37,7 +39,7 @@ Loading...">
   <div id="container">
     <header id="main-header"><div role="navigation" aria-label="Main">
   <div class="nav-left">
-    <a href="https://eeshansrivastava89.github.io/soma-blog-hugo/" style="color: inherit;">Eeshan S.</a>
+    <a href="http://localhost:1313/soma-blog-hugo/" style="color: inherit;">Eeshan S.</a>
   </div>
   <div class="nav-right">
     <div style="position:absolute;width:0px;height:0px;">
@@ -98,18 +100,15 @@ Loading...">
       <div id="main-pane">
         <main id="main-content"><h1 id="search">Search</h1>
 <p>Search through posts, topics, and content on Science of Marketing Analytics.</p>
-<p class="hidden">It&#39;s necessary to enable Javascript</p>
+<p class="hidden">It's necessary to enable Javascript</p>
 <p class="search-loading hidden">Loading...</p>
-
 <form id="search-form" class="search-form" action="#" method="post" accept-charset="UTF-8" role="search">
   <div class="search-bar">
-    <label for="query" class="hidden"></label>
+    <label for="query" class="hidden">Search</label>
     <input id="query" class="search-text" type="text" placeholder="Search..."/>
   </div>
 </form>
-
 <div class="search-results"></div>
-
 <template>
   <article class="search-result list-view">
     <header>
@@ -120,9 +119,7 @@ Loading...">
     </header>
     <p class="content"></p>
   </article>
-</template>
-
-</main>
+</template></main>
         <footer id="main-footer"><div class="footer">
   <a href="#">Scroll to Top</a>
   <div class="footer-copyright">
