Add official Hugo Vercel deployment configuration
- Add vercel.json with proper buildCommand and outputDirectory
- Add build.sh script following Hugo official documentation
- Remove conflicting theme hugo.toml
- Update baseURL for Vercel deployment
- This should fix all layout and deployment issues

--- a/public/topics/index.html
+++ b/public/topics/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en-us" dir="ltr">
-<head><script src="/soma-blog-hugo/livereload.js?mindelay=10&amp;v=2&amp;port=59755&amp;path=soma-blog-hugo/livereload" data-no-instant defer></script>
+<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
   <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <title>Topics | Eeshan S.</title>
-<link rel="icon" href="/favicon.svg" sizes="any" type="image/svg+xml" /><meta property="og:url" content="http://localhost:59755/soma-blog-hugo/topics/">
+<link rel="icon" href="/favicon.svg" sizes="any" type="image/svg+xml" /><meta property="og:url" content="http://localhost:1313/topics/">
   <meta property="og:site_name" content="Eeshan S.">
   <meta property="og:title" content="Topics">
   <meta property="og:description" content="Deep dives into marketing analytics, experimentation, and measurement from a practitioner&#39;s perspective.">
@@ -16,12 +16,12 @@
   <meta name="twitter:title" content="Topics">
   <meta name="twitter:description" content="Deep dives into marketing analytics, experimentation, and measurement from a practitioner&#39;s perspective.">
 
-    <link rel="stylesheet" href="/soma-blog-hugo/css/custom.css">
-    <link rel="stylesheet" href="/soma-blog-hugo/css/root.css">
-    <link rel="stylesheet" href="/soma-blog-hugo/css/bundle.css">
+    <link rel="stylesheet" href="/css/custom.css">
+    <link rel="stylesheet" href="/css/root.css">
+    <link rel="stylesheet" href="/css/bundle.css">
 
-      <script src="/soma-blog-hugo/js/bundle.js"></script><script defer src="/soma-blog-hugo/js/search/flexsearch.compact.64594b125f7b78bdf4fa8316955922bbebb1cd6baef3f16654bfca20309f18f8.js" integrity="sha256-ZFlLEl97eL30&#43;oMWlVkiu&#43;uxzWuu8/FmVL/KIDCfGPg="></script>
-<script defer src="/soma-blog-hugo/js/search/search.790c7dbb017eec9eace3c62d34665bc74799ffc15690b84e63b41018d5929a99.js" integrity="sha256-eQx9uwF&#43;7J6s48YtNGZbx0eZ/8FWkLhOY7QQGNWSmpk="></script>
+      <script src="/js/bundle.js"></script><script defer src="/js/search/flexsearch.compact.64594b125f7b78bdf4fa8316955922bbebb1cd6baef3f16654bfca20309f18f8.js" integrity="sha256-ZFlLEl97eL30&#43;oMWlVkiu&#43;uxzWuu8/FmVL/KIDCfGPg="></script>
+<script defer src="/js/search/search.1d980f84df11f3eb7c8c5f17f541d49a0611608df179dd74fa7f06225eb56ace.js" integrity="sha256-HZgPhN8R8&#43;t8jF8X9UHUmgYRYI3xed10&#43;n8GIl61as4="></script>
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -33,25 +33,25 @@
   <div id="container">
     <header id="main-header"><div role="navigation" aria-label="Main">
   <div class="nav-left">
-    <a href="http://localhost:59755/soma-blog-hugo/" style="color: inherit;">Eeshan S.</a>
+    <a href="http://localhost:1313/" style="color: inherit;">Eeshan S.</a>
   </div>
   <div class="nav-right">
     <div style="position:absolute;width:0px;height:0px;">
       <div id="nav-dropdown-menu" class="hidden" href="#">
     <div class="nav-item">
-      <a href="/soma-blog-hugo/"
+      <a href="/"
       >Home</a>
     </div>
     <div class="nav-item">
-      <a href="/soma-blog-hugo/posts/"
+      <a href="/posts/"
       >Posts</a>
     </div>
     <div class="nav-item">
-      <a href="/soma-blog-hugo/about/"
+      <a href="/about/"
       >About</a>
     </div>
     <div class="nav-item">
-      <a href="/soma-blog-hugo/search/"
+      <a href="/search/"
       >Search</a>
     </div>
 </div>
@@ -62,19 +62,19 @@
 </a>
     <div id="nav-menu">
     <div class="nav-item">
-      <a href="/soma-blog-hugo/"
+      <a href="/"
       >Home</a>
     </div>
     <div class="nav-item">
-      <a href="/soma-blog-hugo/posts/"
+      <a href="/posts/"
       >Posts</a>
     </div>
     <div class="nav-item">
-      <a href="/soma-blog-hugo/about/"
+      <a href="/about/"
       >About</a>
     </div>
     <div class="nav-item">
-      <a href="/soma-blog-hugo/search/"
+      <a href="/search/"
       >Search</a>
     </div>
 </div>
