--- a/public/index.html
+++ b/public/index.html
@@ -158,6 +158,14 @@ What to …</p>
           </div><div style="display: flex; justify-content: space-between; align-items: flex-start; margin-bottom: 1rem; padding-bottom: 1rem; border-bottom: 1px solid var(--dim-color);">
             <div style="flex: 1;">
               <h3 style="margin: 0 0 0.25rem; font-size: 1rem;">
+                <a href="/experiments/ab-test-simulator/" style="text-decoration: none; color: inherit;">A/B Testing Simulator</a>
+              </h3>
+              <p style="margin: 0; font-size: 0.9rem; color: var(--body-text-color); opacity: 0.7; line-height: 1.4;">A/B Testing Simulator Welcome! This is an interactive simulator where you can …</p>
+            </div>
+            <time style="font-size: 0.8rem; color: var(--body-text-color); opacity: 0.6; white-space: nowrap; margin-left: 1rem;">Oct 17</time>
+          </div><div style="display: flex; justify-content: space-between; align-items: flex-start; margin-bottom: 1rem; padding-bottom: 1rem; border-bottom: 1px solid var(--dim-color);">
+            <div style="flex: 1;">
+              <h3 style="margin: 0 0 0.25rem; font-size: 1rem;">
                 <a href="/search/" style="text-decoration: none; color: inherit;">Search</a>
               </h3>
               <p style="margin: 0; font-size: 0.9rem; color: var(--body-text-color); opacity: 0.7; line-height: 1.4;">Search Search through posts, topics, and content on Science of Marketing …</p>
