--- a/public/experiments/ab-test-simulator/index.html
+++ b/public/experiments/ab-test-simulator/index.html
@@ -197,6 +197,57 @@ a_ci = scipy_stats.beta.ppf([0.025, 0.975], a_alpha, a_beta)
     <li>✅ Running tests for the full planned duration</li>
   </ul>
 </div>
+<script>
+// Initialize on page load
+document.addEventListener('DOMContentLoaded', function() {
+  initializeVariant();
+  displayVariant();
+});
+
+function initializeVariant() {
+  // Check if user already has a variant assigned
+  if (!localStorage.getItem('simulator_variant')) {
+    // New user: randomly assign A or B
+    const variant = Math.random() < 0.5 ? 'A' : 'B';
+    localStorage.setItem('simulator_variant', variant);
+    
+    // Generate unique user ID
+    const userId = 'user_' + Math.random().toString(36).substr(2, 9);
+    localStorage.setItem('simulator_user_id', userId);
+    
+    console.log('New user assigned to variant:', variant);
+  }
+}
+
+function displayVariant() {
+  const variant = localStorage.getItem('simulator_variant');
+  
+  // Display which variant user is in
+  document.getElementById('user-variant').textContent = 'Variant ' + variant;
+  
+  // Style button based on variant
+  const button = document.getElementById('cta-button');
+  
+  if (variant === 'A') {
+    button.textContent = 'Sign Up';
+    button.style.backgroundColor = '#0066cc'; // blue
+    button.style.color = 'white';
+  } else {
+    button.textContent = 'Get Started';
+    button.style.backgroundColor = '#27ae60'; // green
+    button.style.color = 'white';
+  }
+  
+  // Add click handler
+  button.addEventListener('click', handleConversion);
+}
+
+function handleConversion() {
+  console.log('Conversion button clicked');
+  // We'll add the tracking logic in Step 3
+  document.getElementById('status').textContent = '✓ Conversion recorded!';
+}
+</script>
 <style>
 .simulator-section {
   border: 1px solid #e0e0e0;
@@ -246,12 +297,11 @@ a_ci = scipy_stats.beta.ppf([0.025, 0.975], a_alpha, a_beta)
   cursor: pointer;
   margin: 1rem 0;
   font-weight: bold;
-  background-color: #0066cc;
-  color: white;
 }
 
 .cta-button:hover {
-  background-color: #0052a3;
+  opacity: 0.9;
+  transform: scale(1.05);
 }
 
 .status-message {
@@ -302,7 +352,7 @@ code {
       <h3>Connect</h3><p>Follow along for more insights on marketing analytics and experimentation.</p>
     </div><div class="side-details">
     <span>313 words</span>
-    <span>4 - 5 minutes read</span></div><h3>Table Of Contents</h3><nav id="TableOfContents">
+    <span>5 - 7 minutes read</span></div><h3>Table Of Contents</h3><nav id="TableOfContents">
   <ul>
     <li><a href="#section-1-your-variant">Section 1: Your Variant</a></li>
     <li><a href="#section-2-live-dashboard">Section 2: Live Dashboard</a></li>
