--- a/public/experiments/ab-test-simulator/index.html
+++ b/public/experiments/ab-test-simulator/index.html
@@ -242,6 +242,16 @@ const PUZZLE_CONFIG = {
   }
 };
 
+// Fun username generator
+const ADJECTIVES = ['Lightning', 'Swift', 'Quick', 'Speedy', 'Rapid', 'Fast', 'Blazing', 'Turbo', 'Sonic', 'Flash'];
+const ANIMALS = ['Leopard', 'Cheetah', 'Falcon', 'Hawk', 'Fox', 'Wolf', 'Tiger', 'Eagle', 'Panther', 'Gazelle'];
+
+function generateUsername() {
+  const adj = ADJECTIVES[Math.floor(Math.random() * ADJECTIVES.length)];
+  const animal = ANIMALS[Math.floor(Math.random() * ANIMALS.length)];
+  return `${adj} ${animal}`;
+}
+
 let puzzleState = {
   variant: null,
   startTime: null,
@@ -267,6 +277,12 @@ function initializeVariant() {
     
     const userId = 'user_' + Math.random().toString(36).substr(2, 9);
     localStorage.setItem('simulator_user_id', userId);
+  }
+  
+  // Always ensure username exists
+  if (!localStorage.getItem('simulator_username')) {
+    const username = generateUsername();
+    localStorage.setItem('simulator_username', username);
   }
 }
 
@@ -826,7 +842,7 @@ async function updateDashboard() {
       <h3>Connect</h3><p>Follow along for more insights on marketing analytics and experimentation.</p>
     </div><div class="side-details">
     <span>291 words</span>
-    <span>19 - 25 minutes read</span></div><h3>Table Of Contents</h3><nav id="TableOfContents">
+    <span>20 - 26 minutes read</span></div><h3>Table Of Contents</h3><nav id="TableOfContents">
   <ul>
     <li><a href="#section-1-word-search-challenge">Section 1: Word Search Challenge</a></li>
     <li><a href="#section-2-live-dashboard">Section 2: Live Dashboard</a></li>
