--- a/public/experiments/ab-test-simulator/index.html
+++ b/public/experiments/ab-test-simulator/index.html
@@ -186,6 +186,54 @@
       <p>Success Rate: <strong id="variant-b-success-rate">-</strong></p>
     </div>
   </div>
+  <h4 style="margin-top: 2rem;">User Funnel</h4>
+  <div class="funnel-container">
+    <div class="funnel-variant">
+      <h5>Variant A</h5>
+      <div class="funnel-bar">
+        <div class="funnel-label">Started</div>
+        <div class="funnel-bar-fill" id="funnel-a-started" style="width: 0%; background-color: #3498db;">
+          <span class="funnel-count">0</span>
+        </div>
+      </div>
+      <div class="funnel-bar">
+        <div class="funnel-label">Completed</div>
+        <div class="funnel-bar-fill" id="funnel-a-completed" style="width: 0%; background-color: #27ae60;">
+          <span class="funnel-count">0</span>
+        </div>
+      </div>
+      <div class="funnel-bar">
+        <div class="funnel-label">Repeated</div>
+        <div class="funnel-bar-fill" id="funnel-a-repeated" style="width: 0%; background-color: #f39c12;">
+          <span class="funnel-count">0</span>
+        </div>
+      </div>
+      <p class="funnel-rates" id="funnel-a-rates">Completion: -% | Repeat: -%</p>
+    </div>
+    <!-- Funnel Visualization -->
+    <div class="funnel-variant">
+      <h5>Variant B</h5>
+      <div class="funnel-bar">
+        <div class="funnel-label">Started</div>
+        <div class="funnel-bar-fill" id="funnel-b-started" style="width: 0%; background-color: #3498db;">
+          <span class="funnel-count">0</span>
+        </div>
+      </div>
+      <div class="funnel-bar">
+        <div class="funnel-label">Completed</div>
+        <div class="funnel-bar-fill" id="funnel-b-completed" style="width: 0%; background-color: #27ae60;">
+          <span class="funnel-count">0</span>
+        </div>
+      </div>
+      <div class="funnel-bar">
+        <div class="funnel-label">Repeated</div>
+        <div class="funnel-bar-fill" id="funnel-b-repeated" style="width: 0%; background-color: #f39c12;">
+          <span class="funnel-count">0</span>
+        </div>
+      </div>
+      <p class="funnel-rates" id="funnel-b-rates">Completion: -% | Repeat: -%</p>
+    </div>
+  </div>
   <p class="last-updated">Last updated: <span id="last-updated">never</span></p>
 </div>
 <h2 id="section-3-python-code">Section 3: Python Code</h2>
@@ -248,8 +296,8 @@ b_avg_time = b_completed['completion_time'].mean()
       </div><aside id="side-pane" class="side-sticky"><div class="side-content">
       <h3>Connect</h3><p>Follow along for more insights on marketing analytics and experimentation.</p>
     </div><div class="side-details">
-    <span>316 words</span>
-    <span>6 - 8 minutes read</span></div><h3>Table Of Contents</h3><nav id="TableOfContents">
+    <span>344 words</span>
+    <span>8 - 10 minutes read</span></div><h3>Table Of Contents</h3><nav id="TableOfContents">
   <ul>
     <li><a href="#section-1-word-search-challenge">Section 1: Word Search Challenge</a></li>
     <li><a href="#section-2-live-dashboard">Section 2: Live Dashboard</a></li>
