--- a/public/experiments/ab-test-simulator/index.html
+++ b/public/experiments/ab-test-simulator/index.html
@@ -282,8 +282,8 @@ b_avg_time = b_completed['completion_time'].mean()
   <h4>What Are Credible Intervals?</h4>
   <p>The 95% credible interval means: "We're 95% confident the true value is in this range."</p>
 </div>
-<link rel="stylesheet" href="/css/ab-simulator.css">
-<script src="/js/ab-simulator.js"></script>
+<link rel="stylesheet" href="/css/ab-simulator.css?v=1.1">
+<script src="/js/ab-simulator.js?v=1.1"></script>
 </section></main>
         <footer id="main-footer"><div class="footer">
   <a href="#">Scroll to Top</a>
