--- a/public/404.html
+++ b/public/404.html
@@ -109,5 +109,9 @@
 </footer>
       </div></div>
   </div>
+  <script>
+    window.si = window.si || function () { (window.siq = window.siq || []).push(arguments); };
+  </script>
+  <script defer src="/_vercel/speed-insights/script.js"></script>
 </body>
 </html>
