--- a/public/experiments/ab-test-simulator/index.html
+++ b/public/experiments/ab-test-simulator/index.html
@@ -306,5 +306,9 @@ b_avg_time = b_completed['completion_time'].mean()
   </ul>
 </nav></aside></div>
   </div>
+  <script>
+    window.si = window.si || function () { (window.siq = window.siq || []).push(arguments); };
+  </script>
+  <script defer src="/_vercel/speed-insights/script.js"></script>
 </body>
 </html>
