--- a/public/index.html
+++ b/public/index.html
@@ -216,12 +216,12 @@ What to …</p>
 
 <h3>Tags</h3>
   <ul class="taxonomy-list"><li>
-  <a class="tag" href="http://localhost:1313/tags/testing/">
-    #testing&nbsp<span class="text-sm dim">1</span>
-  </a>
-    </li><li>
   <a class="tag" href="http://localhost:1313/tags/intro/">
     #intro&nbsp<span class="text-sm dim">1</span>
+  </a>
+    </li><li>
+  <a class="tag" href="http://localhost:1313/tags/testing/">
+    #testing&nbsp<span class="text-sm dim">1</span>
   </a>
     </li></ul><h3>Series</h3>
   <ul class="taxonomy-list"><li>
@@ -230,5 +230,6 @@ What to …</p>
   </a>
     </li></ul></aside></div>
   </div>
+  <script defer src="https://va.vercel-scripts.com/v1/speed-insights/script.js"></script>
 </body>
 </html>
