--- a/public/404.html
+++ b/public/404.html
@@ -109,9 +109,6 @@
 </footer>
       </div></div>
   </div>
-  <script>
-    window.si = window.si || function () { (window.siq = window.siq || []).push(arguments); };
-  </script>
-  <script defer src="/_vercel/speed-insights/script.js"></script>
+  <script defer src="https://va.vercel-scripts.com/v1/speed-insights/script.js"></script>
 </body>
 </html>
