--- a/public/experiments/ab-test-simulator/index.html
+++ b/public/experiments/ab-test-simulator/index.html
@@ -118,6 +118,7 @@
 <div id="puzzle-section" class="simulator-section">
   <h3>Your Challenge</h3>
   <p>You are in: <strong id="user-variant">Loading...</strong></p>
+  <p>Username: <strong id="user-username">Loading...</strong></p>
   <p id="difficulty-display"></p>
   <div id="puzzle-container" style="display: none;">
     <div id="letter-grid" class="letter-grid"></div>
@@ -296,7 +297,7 @@ b_avg_time = b_completed['completion_time'].mean()
       </div><aside id="side-pane" class="side-sticky"><div class="side-content">
       <h3>Connect</h3><p>Follow along for more insights on marketing analytics and experimentation.</p>
     </div><div class="side-details">
-    <span>344 words</span>
+    <span>346 words</span>
     <span>8 - 10 minutes read</span></div><h3>Table Of Contents</h3><nav id="TableOfContents">
   <ul>
     <li><a href="#section-1-word-search-challenge">Section 1: Word Search Challenge</a></li>
