--- a/public/experiments/ab-test-simulator/index.html
+++ b/public/experiments/ab-test-simulator/index.html
@@ -187,53 +187,19 @@
       <p>Success Rate: <strong id="variant-b-success-rate">-</strong></p>
     </div>
   </div>
-  <h4 style="margin-top: 2rem;">User Funnel</h4>
-  <div class="funnel-container">
-    <div class="funnel-variant">
-      <h5>Variant A</h5>
-      <div class="funnel-bar">
-        <div class="funnel-label">Started</div>
-        <div class="funnel-bar-fill" id="funnel-a-started" style="width: 0%; background-color: #3498db;">
-          <span class="funnel-count">0</span>
-        </div>
-      </div>
-      <div class="funnel-bar">
-        <div class="funnel-label">Completed</div>
-        <div class="funnel-bar-fill" id="funnel-a-completed" style="width: 0%; background-color: #27ae60;">
-          <span class="funnel-count">0</span>
-        </div>
-      </div>
-      <div class="funnel-bar">
-        <div class="funnel-label">Repeated</div>
-        <div class="funnel-bar-fill" id="funnel-a-repeated" style="width: 0%; background-color: #f39c12;">
-          <span class="funnel-count">0</span>
-        </div>
-      </div>
-      <p class="funnel-rates" id="funnel-a-rates">Completion: -% | Repeat: -%</p>
-    </div>
-    <!-- Funnel Visualization -->
-    <div class="funnel-variant">
-      <h5>Variant B</h5>
-      <div class="funnel-bar">
-        <div class="funnel-label">Started</div>
-        <div class="funnel-bar-fill" id="funnel-b-started" style="width: 0%; background-color: #3498db;">
-          <span class="funnel-count">0</span>
-        </div>
-      </div>
-      <div class="funnel-bar">
-        <div class="funnel-label">Completed</div>
-        <div class="funnel-bar-fill" id="funnel-b-completed" style="width: 0%; background-color: #27ae60;">
-          <span class="funnel-count">0</span>
-        </div>
-      </div>
-      <div class="funnel-bar">
-        <div class="funnel-label">Repeated</div>
-        <div class="funnel-bar-fill" id="funnel-b-repeated" style="width: 0%; background-color: #f39c12;">
-          <span class="funnel-count">0</span>
-        </div>
-      </div>
-      <p class="funnel-rates" id="funnel-b-rates">Completion: -% | Repeat: -%</p>
-    </div>
+  <h4 style="margin-top: 2rem;">Difficulty Analysis</h4>
+  <div style="padding: 1rem; background-color: #fff; border: 1px solid #e0e0e0; border-radius: 4px; margin-bottom: 1rem;">
+    <p id="difficulty-comparison" style="margin: 0; color: #333; font-size: 0.95rem;">Loading difficulty analysis...</p>
+  </div>
+  <h4 style="margin-top: 2rem;">Interactive Visualizations</h4>
+  <!-- Funnel Chart -->
+  <div id="funnel-chart" style="width: 100%; height: 450px; background-color: #fff; border: 1px solid #e0e0e0; border-radius: 4px; margin-bottom: 1rem;"></div>
+  <!-- Time Distribution -->
+  <div id="time-distribution-chart" style="width: 100%; height: 450px; background-color: #fff; border: 1px solid #e0e0e0; border-radius: 4px; margin-bottom: 1rem;"></div>
+  <!-- Comparison Charts -->
+  <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 1rem; margin-bottom: 1rem;">
+    <div id="success-rate-chart" style="width: 100%; height: 400px; background-color: #fff; border: 1px solid #e0e0e0; border-radius: 4px;"></div>
+    <div id="avg-time-chart" style="width: 100%; height: 400px; background-color: #fff; border: 1px solid #e0e0e0; border-radius: 4px;"></div>
   </div>
   <p class="last-updated">Last updated: <span id="last-updated">never</span></p>
 </div>
@@ -283,9 +249,9 @@ b_avg_time = b_completed['completion_time'].mean()
   <h4>What Are Credible Intervals?</h4>
   <p>The 95% credible interval means: "We're 95% confident the true value is in this range."</p>
 </div>
-<link rel="stylesheet" href="/css/ab-simulator.css?v=1.1">
-<script src="/js/ab-simulator.js?v=1.1"></script>
-</section></main>
+<link rel="stylesheet" href="/css/ab-simulator.css?v=1.2">
+<script src="https://cdn.plot.ly/plotly-2.27.0.min.js"></script>
+<script src="/js/ab-simulator.js?v=1.2"></script></section></main>
         <footer id="main-footer"><div class="footer">
   <a href="#">Scroll to Top</a>
   <div class="footer-copyright">
@@ -297,8 +263,8 @@ b_avg_time = b_completed['completion_time'].mean()
       </div><aside id="side-pane" class="side-sticky"><div class="side-content">
       <h3>Connect</h3><p>Follow along for more insights on marketing analytics and experimentation.</p>
     </div><div class="side-details">
-    <span>346 words</span>
-    <span>8 - 10 minutes read</span></div><h3>Table Of Contents</h3><nav id="TableOfContents">
+    <span>325 words</span>
+    <span>7 - 9 minutes read</span></div><h3>Table Of Contents</h3><nav id="TableOfContents">
   <ul>
     <li><a href="#section-1-word-search-challenge">Section 1: Word Search Challenge</a></li>
     <li><a href="#section-2-live-dashboard">Section 2: Live Dashboard</a></li>
