--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
 
   
   
-  <meta http-equiv="Content-Security-Policy" content="frame-src https://soma-app-dashboard-bfabkj7dkvffezprdsnm78.streamlit.app; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; script-src 'self' 'unsafe-inline' https://us.i.posthog.com;">
+  <meta http-equiv="Content-Security-Policy" content="frame-src https://soma-app-dashboard-bfabkj7dkvffezprdsnm78.streamlit.app; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; script-src 'self' 'unsafe-inline' https://us.i.posthog.com https://us-assets.i.posthog.com;">
   
   <script>
       
@@ -43,7 +43,8 @@
         if (message.includes('SameSite') || 
             message.includes('streamlit_csrf') ||
             message.includes('preload') ||
-            message.includes('cross-site context')) {
+            message.includes('cross-site context') ||
+            message.includes('Unrecognized feature')) {
           return; 
         }
         originalWarn.apply(console, args);
@@ -55,7 +56,9 @@
         
         if (message.includes('SameSite') || 
             message.includes('cross-site') ||
-            message.includes('Cookie')) {
+            message.includes('Cookie') ||
+            message.includes('Potential permissions policy violation') ||
+            message.includes('[Violation]')) {
           return; 
         }
         originalError.apply(console, args);
