small updates to site layout and about

--- a/public/search/index.html
+++ b/public/search/index.html
@@ -53,6 +53,10 @@ Search">
       >Posts</a>
     </div>
     <div class="nav-item">
+      <a href="/projects/"
+      >Projects</a>
+    </div>
+    <div class="nav-item">
       <a href="/about/"
       >About</a>
     </div>
@@ -74,6 +78,10 @@ Search">
     <div class="nav-item">
       <a href="/posts/"
       >Posts</a>
+    </div>
+    <div class="nav-item">
+      <a href="/projects/"
+      >Projects</a>
     </div>
     <div class="nav-item">
       <a href="/about/"
