--- a/public/index.html
+++ b/public/index.html
@@ -92,6 +92,10 @@
       >Posts</a>
     </div>
     <div class="nav-item">
+      <a href="/projects/"
+      >Projects</a>
+    </div>
+    <div class="nav-item">
       <a href="/about/"
       >About</a>
     </div>
@@ -113,6 +117,10 @@
     <div class="nav-item">
       <a href="/posts/"
       >Posts</a>
+    </div>
+    <div class="nav-item">
+      <a href="/projects/"
+      >Projects</a>
     </div>
     <div class="nav-item">
       <a href="/about/"
@@ -202,7 +210,7 @@ What to …</p>
           </div><div style="display: flex; justify-content: space-between; align-items: flex-start; margin-bottom: 1rem; padding-bottom: 1rem; border-bottom: 1px solid var(--dim-color);">
             <div style="flex: 1;">
               <h3 style="margin: 0 0 0.25rem; font-size: 1rem;">
-                <a href="/experiments/ab-test-simulator/" style="text-decoration: none; color: inherit;">A/B Testing Simulator</a>
+                <a href="/projects/ab-test-simulator/" style="text-decoration: none; color: inherit;">A/B Testing Simulator</a>
               </h3>
               <p style="margin: 0; font-size: 0.9rem; color: var(--body-text-color); opacity: 0.7; line-height: 1.4;">Welcome! This is an interactive simulator where you can see A/B testing and …</p>
             </div>
@@ -256,16 +264,39 @@ What to …</p>
       <small>Subscribe to my newsletter</small>
     </span>
   </a>
+
+  <iframe src="https://scienceofmarketinganalytics.substack.com/embed" width="480" height="320" style="border:1px solid #EEE; background:white;" frameborder="0" scrolling="no"></iframe>
+
 </div>
 
 <h3>Tags</h3>
   <ul class="taxonomy-list"><li>
+  <a class="tag" href="http://localhost:1313/tags/testing/">
+    #testing&nbsp<span class="text-sm dim">1</span>
+  </a>
+    </li><li>
+  <a class="tag" href="http://localhost:1313/tags/ab-testing/">
+    #ab-testing&nbsp<span class="text-sm dim">1</span>
+  </a>
+    </li><li>
+  <a class="tag" href="http://localhost:1313/tags/hypothesis-testing/">
+    #hypothesis testing&nbsp<span class="text-sm dim">1</span>
+  </a>
+    </li><li>
   <a class="tag" href="http://localhost:1313/tags/intro/">
     #intro&nbsp<span class="text-sm dim">1</span>
   </a>
     </li><li>
-  <a class="tag" href="http://localhost:1313/tags/testing/">
-    #testing&nbsp<span class="text-sm dim">1</span>
+  <a class="tag" href="http://localhost:1313/tags/posthog/">
+    #posthog&nbsp<span class="text-sm dim">1</span>
+  </a>
+    </li><li>
+  <a class="tag" href="http://localhost:1313/tags/streamlit/">
+    #streamlit&nbsp<span class="text-sm dim">1</span>
+  </a>
+    </li><li>
+  <a class="tag" href="http://localhost:1313/tags/supabase/">
+    #supabase&nbsp<span class="text-sm dim">1</span>
   </a>
     </li></ul><h3>Series</h3>
   <ul class="taxonomy-list"><li>
