--- a/public/index.html
+++ b/public/index.html
@@ -173,7 +173,7 @@
         <svg width="18" height="18" viewBox="0 0 24 24" fill="currentColor"><path d="M22.539 8.242H1.46V5.406h21.08v2.836zM1.46 10.812V24L12 18.11 22.54 24V10.812H1.46zM22.54 0H1.46v2.836h21.08V0z"/></svg>
       </a>
       
-      <a href="/about" style="padding: 0.5rem; border-radius: 50%; background-color: var(--dim-color); text-decoration: none; display: flex; align-items: center; justify-content: center; width: 40px; height: 40px;">
+      <a href="/about/" style="padding: 0.5rem; border-radius: 50%; background-color: var(--dim-color); text-decoration: none; display: flex; align-items: center; justify-content: center; width: 40px; height: 40px;">
         <svg width="18" height="18" viewBox="0 0 24 24" fill="currentColor"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"/></svg>
       </a>
     </div>
@@ -271,10 +271,6 @@ What to …</p>
 
 <h3>Tags</h3>
   <ul class="taxonomy-list"><li>
-  <a class="tag" href="http://localhost:1313/tags/testing/">
-    #testing&nbsp<span class="text-sm dim">1</span>
-  </a>
-    </li><li>
   <a class="tag" href="http://localhost:1313/tags/ab-testing/">
     #ab-testing&nbsp<span class="text-sm dim">1</span>
   </a>
@@ -297,6 +293,10 @@ What to …</p>
     </li><li>
   <a class="tag" href="http://localhost:1313/tags/supabase/">
     #supabase&nbsp<span class="text-sm dim">1</span>
+  </a>
+    </li><li>
+  <a class="tag" href="http://localhost:1313/tags/testing/">
+    #testing&nbsp<span class="text-sm dim">1</span>
   </a>
     </li></ul><h3>Series</h3>
   <ul class="taxonomy-list"><li>
