Year back to left column (right-aligned to dot)

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -10,7 +10,7 @@
   <meta property="og:title" content="About">
   <meta property="og:description" content="I’m Eeshan. A data science and analytics practitioner with over a decade of experience in marketing &amp; product analytics, experimentation, and data science. I believe in two levels of learning:
 learning by doing learning by teaching In this site, you will see me doing both.
-Background Starbucks - Sr. Manager Data Science (2019-Present) Overstock - Manager of Data Analytics (2016-2019) Amazon - Sr. Product Manager (2015) Education - Comp Science undergrad &#43; MBA &#43; Self-learning stats &amp; data science (MIT) Elsewhere You can connect with me or recieve my updates through the following:">
+My Journey 2019 Sr. Manager Data ScienceStarbucksLeading data science initiatives across marketing and product analytics">
   <meta property="og:locale" content="en_us">
   <meta property="og:type" content="website">
 
@@ -18,7 +18,7 @@ Background Starbucks - Sr. Manager Data Science (2019-Present) Overstock - Manag
   <meta name="twitter:title" content="About">
   <meta name="twitter:description" content="I’m Eeshan. A data science and analytics practitioner with over a decade of experience in marketing &amp; product analytics, experimentation, and data science. I believe in two levels of learning:
 learning by doing learning by teaching In this site, you will see me doing both.
-Background Starbucks - Sr. Manager Data Science (2019-Present) Overstock - Manager of Data Analytics (2016-2019) Amazon - Sr. Product Manager (2015) Education - Comp Science undergrad &#43; MBA &#43; Self-learning stats &amp; data science (MIT) Elsewhere You can connect with me or recieve my updates through the following:">
+My Journey 2019 Sr. Manager Data ScienceStarbucksLeading data science initiatives across marketing and product analytics">
 
     <link rel="stylesheet" href="/css/custom.css">
     <link rel="stylesheet" href="/css/root.css">
@@ -154,15 +154,159 @@ Background Starbucks - Sr. Manager Data Science (2019-Present) Overstock - Manag
 <li>learning by teaching</li>
 </ol>
 <p>In this site, you will see me doing both.</p>
-<h2 id="background">Background</h2>
-<ul>
-<li><strong>Starbucks</strong> - Sr. Manager Data Science (2019-Present)</li>
-<li><strong>Overstock</strong> - Manager of Data Analytics (2016-2019)</li>
-<li><strong>Amazon</strong> - Sr. Product Manager (2015)</li>
-<li><strong>Education</strong> - Comp Science undergrad + MBA + Self-learning stats &amp; data science (MIT)</li>
-</ul>
+<h2 id="my-journey">My Journey</h2>
+<style>
+.timeline {
+  display: grid;
+  grid-template-columns: 100px 1fr;
+  grid-column-gap: 20px;
+  row-gap: 0;
+}
+
+.timeline-entry {
+  display: contents;
+}
+
+.timeline-left {
+  grid-column: 1;
+  vertical-align: top;
+  border-left: 2px solid #cfcfcf;
+  position: relative;
+  padding-bottom: 20px;
+}
+
+.timeline-entry-dot {
+  position: absolute;
+  top: 3px;
+  left: -8px;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background-color: #cfcfcf;
+  border: 2px solid white;
+}
+
+.timeline-year {
+  font-size: 13px;
+  color: #999;
+  font-weight: 600;
+  text-align: right;
+  padding-right: 10px;
+}
+
+.timeline-right {
+  grid-column: 2;
+  vertical-align: top;
+  font-size: 16px;
+  padding-bottom: 20px;
+}
+
+.timeline-title {
+  font-size: 18px;
+  font-weight: 700;
+  color: #000;
+  margin: 0 0 0.5rem 0;
+  line-height: 1.2;
+}
+
+.timeline-company {
+  font-size: 15px;
+  color: #666;
+  font-weight: 500;
+  margin-bottom: 0.75rem;
+  font-style: italic;
+}
+
+.timeline-description {
+  font-size: 15px;
+  color: #333;
+  line-height: 1.6;
+  margin-bottom: 0.75rem;
+}
+
+.timeline-details {
+  font-size: 14px;
+  color: #444;
+  margin: 1rem 0;
+  padding-left: 1.5rem;
+  list-style-type: disc;
+}
+
+.timeline-details li {
+  margin-bottom: 0.5rem;
+  line-height: 1.5;
+}
+
+.timeline-category {
+  display: inline-block;
+  font-size: 11px;
+  font-weight: 600;
+  text-transform: uppercase;
+  letter-spacing: 0.8px;
+  padding: 0.35rem 0.85rem;
+  border-radius: 20px;
+  margin-top: 0.75rem;
+}
+
+.timeline-category.work {
+  background: rgba(205, 92, 92, 0.12);
+  color: #cd5c5c;
+}
+
+.timeline-category.education {
+  background: rgba(100, 149, 237, 0.12);
+  color: #6495ed;
+}
+
+.timeline-category.project {
+  background: rgba(144, 238, 144, 0.12);
+  color: #32cd32;
+}
+
+@media (max-width: 768px) {
+  .timeline {
+    grid-template-columns: 1fr;
+    grid-column-gap: 0;
+  }
+  
+  .timeline-left {
+    display: none;
+  }
+  
+  .timeline-right {
+    grid-column: 1;
+  }
+}
+</style>
+
+<div class="timeline"><div class="timeline-left">
+    <div class="timeline-entry-dot"></div>
+    <div class="timeline-year">2019</div>
+  </div>
+  <div class="timeline-right">
+    <h3 class="timeline-title">Sr. Manager Data Science</h3><div class="timeline-company">Starbucks</div><p class="timeline-description">Leading data science initiatives across marketing and product analytics</p><ul class="timeline-details"><li>Built experimentation platform for A/B testing at scale</li><li>Developed predictive models for customer behavior and churn</li><li>Led cross-functional projects on personalization and targeting</li></ul><span class="timeline-category work">work</span></div><div class="timeline-left">
+    <div class="timeline-entry-dot"></div>
+    <div class="timeline-year">2016</div>
+  </div>
+  <div class="timeline-right">
+    <h3 class="timeline-title">Manager of Data Analytics</h3><div class="timeline-company">Overstock</div><p class="timeline-description">Managed analytics team and drove data-driven decision making</p><ul class="timeline-details"><li>Scaled analytics infrastructure and reporting systems</li><li>Mentored junior analysts and data scientists</li><li>Launched customer segmentation and lifecycle analytics</li></ul><span class="timeline-category work">work</span></div><div class="timeline-left">
+    <div class="timeline-entry-dot"></div>
+    <div class="timeline-year">2015</div>
+  </div>
+  <div class="timeline-right">
+    <h3 class="timeline-title">Sr. Product Manager</h3><div class="timeline-company">Amazon</div><p class="timeline-description">Product management and analytics role</p><span class="timeline-category work">work</span></div><div class="timeline-left">
+    <div class="timeline-entry-dot"></div>
+    <div class="timeline-year">2015</div>
+  </div>
+  <div class="timeline-right">
+    <h3 class="timeline-title">MBA &#43; Self-Learning</h3><p class="timeline-description">Advanced studies in business and data science</p><ul class="timeline-details"><li>MBA completion</li><li>Self-directed learning in statistics and machine learning</li><li>MIT coursework in analytics</li></ul><span class="timeline-category education">education</span></div><div class="timeline-left">
+    <div class="timeline-entry-dot"></div>
+    <div class="timeline-year">2012</div>
+  </div>
+  <div class="timeline-right">
+    <h3 class="timeline-title">Computer Science Degree</h3><p class="timeline-description">Undergraduate studies in Computer Science</p><span class="timeline-category education">education</span></div></div>
 <h2 id="elsewhere">Elsewhere</h2>
-<p>You can connect with me or recieve my updates through the following:</p>
+<p>You can connect with me or receive my updates through the following:</p>
 <ul>
 <li><a href="https://scienceofmarketinganalytics.substack.com/">My Substack on Marketing &amp; Product Analytics</a></li>
 <li><a href="https://linkedin.com/in/eeshans">LinkedIn</a></li>
