--- a/public/projects/ab-test-simulator/index.html
+++ b/public/projects/ab-test-simulator/index.html
@@ -366,25 +366,7 @@ b_avg_time = b_completed['completion_time'].mean()
   </div>
 </div>
 </footer>
-      </div><aside id="side-pane" class="side-sticky"><div class="side-content">
-      <h3>Connect</h3><p>Follow along for more insights on marketing analytics and experimentation.</p>
-    </div><div class="side-details">
-    <span>375 words</span>
-    <span>1 - 1 minutes read</span><div class="side-details-taxonomy">
-        <small>categories: 
-          <span class="details-taxonomy"><a href="http://localhost:1313/categories/projects">projects</a></span></small>
-      </div></div><h3>Table Of Contents</h3><nav id="TableOfContents">
-  <ul>
-    <li><a href="#section-1-word-search-challenge">Section 1: Word Search Challenge</a></li>
-    <li><a href="#section-2-live-dashboard">Section 2: Live Dashboard</a></li>
-    <li><a href="#section-3-python-code">Section 3: Python Code</a></li>
-    <li><a href="#section-4-education">Section 4: Education</a>
-      <ul>
-        <li><a href="#understanding-the-results">Understanding the Results</a></li>
-      </ul>
-    </li>
-  </ul>
-</nav></aside></div>
+      </div></div>
   </div>
 </body>
 </html>
